--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>ToK Notes - Class of 2019</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -24,7 +24,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">TOK Class of 2019</span>
 								</a>
 
 							<!-- Nav -->
@@ -53,9 +53,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>Theory of Knowledge</h1>
+								<p>This IB course challenges students to reflect critically on diverse ‘ways of knowing’ (WoKs) and ‘areas of knowledge’ (AoKs), considering the roles knowledge plays in our world. There is an emphasis on comparing knowledge in different subject areas (AoKs) in an effort to ultimately make interdisciplinary connections. Among the aims of the course are the development of an understanding of the importance of critically examining knowledge claims and the critical capacity to evaluate beliefs and knowledge claims. Among the objectives of the course are demonstrating an understanding of the strengths and limitations of the various Ways of Knowing and of the methods used in the different Areas of Knowledge, identifying values underlying judgments and knowledge claims pertinent to local and global issues, and using oral and written language to formulate and communicate ideas clearly.  </p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -228,7 +227,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy;Class of 2019</li>
 							</ul>
 						</div>
 					</footer>
