--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">HL History</a></li>
+							<li><a href="generic.html">HL Chemistry</a></li>
+							<li><a href="generic.html">HL English</a></li>
+							<li><a href="generic.html">SL Physics</a></li>
+							<li><a href="generic.html">SL Math</a></li>
+							<li><a href="generic.html">SL French</a></li>
+							<li><a href="elements.html">About Us</a></li>
 						</ul>
 					</nav>
 
@@ -61,8 +64,8 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
+									<a href="chapter-9-reading-guide.html">
+										<h2>Chapter 9 Reading Guide: Paradigms</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
