--- a/generic.html
+++ b/generic.html
@@ -42,10 +42,13 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">HL History</a></li>
+							<li><a href="generic.html">HL Chemistry</a></li>
+							<li><a href="generic.html">HL English</a></li>
+							<li><a href="generic.html">SL Physics</a></li>
+							<li><a href="generic.html">SL Math</a></li>
+							<li><a href="generic.html">SL French</a></li>
+							<li><a href="elements.html">About Us</a></li>
 						</ul>
 					</nav>
 
